[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hrantPOG"
version = "1.0"
authors = [
  { name="Hrant Manukyan", email="manukyanhrant@gmail.com" },
]
description = "A package with a bunch of different things that you may or may not use for your projects."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jellybitch/hrantPOG"
"Bug Tracker" = "https://github.com/jellybitch/hrantPOG/issues"
